--- a/index.html
+++ b/index.html
@@ -49,11 +49,6 @@
       100% { transform: scale(1); }
     }
 
-    @keyframes floatUp {
-      from { opacity: 1; transform: translateY(0); }
-      to { opacity: 0; transform: translateY(-300px); }
-    }
-
     button {
       margin-top: 20px;
       padding: 10px 22px;
@@ -64,7 +59,6 @@
       font-size: 1rem;
       cursor: pointer;
       transition: background 0.3s, transform 0.2s;
-      position: relative;
     }
 
     button:hover {
@@ -90,7 +84,7 @@
       background: #ff85ad;
     }
 
-    /* 🖼️ SLIDESHOW — RESIZE ONLY (NO CROP) */
+    /* 🖼️ SLIDESHOW — UNCHANGED */
     #slideshow {
       display: none;
       margin-top: 25px;
@@ -112,7 +106,6 @@
       box-shadow: 0 6px 15px rgba(0,0,0,0.2);
     }
 
-    /* 🌸 FINAL MESSAGE */
     #finalMessage {
       display: none;
       margin-top: 25px;
@@ -152,7 +145,7 @@
       whenever <em>you</em> are ready. I choose you, today and always.
     </div>
 
-    <button id="usButton">US 💑</button>
+    <button id="usButton" onclick="startSlideshow()">US 💑</button>
 
     <div id="slideshow">
       <div id="yearLabel"></div>
@@ -169,51 +162,54 @@
   </audio>
 
   <script>
-    const funButton = document.getElementById('funButton');
-    const tease = document.getElementById('tease');
     const music = document.getElementById('bgMusic');
     const usButton = document.getElementById('usButton');
     const slideshow = document.getElementById('slideshow');
     const slideImage = document.getElementById('slideImage');
     const yearLabel = document.getElementById('yearLabel');
     const finalMessage = document.getElementById('finalMessage');
+    const funButton = document.getElementById('funButton');
+    const tease = document.getElementById('tease');
 
+    /* 🏃 RUNAWAY BUTTON LOGIC (ADDED) */
     let clicked = false;
 
-    // 🏃‍♀️ Button runs away until clicked
     function moveButton() {
       if (clicked) return;
 
-      const x = Math.random() * 160 - 80;
+      const x = Math.random() * 200 - 100;
       const y = Math.random() * 120 - 60;
+
       funButton.style.transform = `translate(${x}px, ${y}px)`;
     }
 
-    funButton.addEventListener('mouseover', moveButton);
+    funButton.addEventListener('mouseenter', moveButton);
 
-    funButton.addEventListener('click', () => {
+    /* ORIGINAL LOGIC + stop movement after click */
+    function showMessage() {
       clicked = true;
-      funButton.removeEventListener('mouseover', moveButton);
+      funButton.removeEventListener('mouseenter', moveButton);
       funButton.style.transform = 'translate(0,0)';
       funButton.disabled = true;
-      funButton.innerText = 'Good girl 😘';
-      tease.innerText = 'Ok you caught me 😘';
 
       document.getElementById('message').style.display = 'block';
+      tease.innerText = 'Ok you caught me 😘';
       usButton.style.display = 'inline-block';
 
       music.volume = 0.6;
       music.play().catch(() => {});
-    });
+    }
 
-    // 📸 Slideshow logic (unlimited images via photos.json)
+    funButton.addEventListener('click', showMessage);
+
+    /* SLIDESHOW — UNCHANGED */
     let photos = {};
     let years = [];
     let yearIndex = 0;
     let photoIndex = 0;
     let interval;
 
-    usButton.addEventListener('click', async () => {
+    async function startSlideshow() {
       usButton.style.display = 'none';
       slideshow.style.display = 'block';
 
@@ -223,7 +219,7 @@
 
       interval = setInterval(showNext, 2500);
       showNext();
-    });
+    }
 
     function showNext() {
       const year = years[yearIndex];
@@ -233,7 +229,6 @@
       slideImage.src = `${year}/${imgs[photoIndex]}`;
 
       photoIndex++;
-
       if (photoIndex >= imgs.length) {
         photoIndex = 0;
         yearIndex++;
